[gd_scene load_steps=10 format=2]

[ext_resource path="res://themes/health_bar.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Levels/blocks/Lava.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/blocks/Buildable Surface.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Levels/blocks/Fall-based Buildable Body.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Levels/blocks/Non-Buildable Surface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Misc/precache.gd" type="Script" id=6]
[ext_resource path="res://Fonts/big-space-font/Title Screen.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Player/hands/floater selector.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "precache"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionalLight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 360, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spawnArea:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -3, 0, 0 ), Vector3( 2, 0, 0 ) ]
}

[node name="precache" type="Spatial"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 35 )
current = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 40.3134
margin_top = 979.575
margin_right = 220.313
margin_bottom = 1027.57
custom_fonts/font = ExtResource( 7 )
text = "Precashing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 279.0
margin_top = 990.0
margin_right = 1863.0
margin_bottom = 1039.0
theme = ExtResource( 1 )
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawnArea" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="spawner" type="Timer" parent="."]
autostart = true

[node name="Buildable Surface" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.34451, 0.664804, 3.65781 )

[node name="Fall-based Buildable Body" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.76384, -3.16557, -0.434947 )

[node name="Lava" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2525, -1.58671, 5.26276 )

[node name="Non-Buildable Surface" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05497, -3.13091, 2.70023 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 4.2469e-13, 6.51683e-07, 0, 1, -6.51683e-07, -6.51683e-07, 6.51683e-07, 1, 0, 3, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/precache = SubResource( 1 )

[node name="floater selector" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.7677, 0.560295, 2.80156 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="spawner" to="." method="_on_spawner_timeout"]
